# lipservice

./: .gitignore  CODING_STANDARDS.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTING_TO_POSTHOG.md  DAILY_WORKFLOW.md  Dockerfile  FOR_GITHUB_ISSUE.md  GIT_WORKFLOW.md  LICENSE  POSTHOG_ISSUES_POST.md  POSTHOG_PROPOSAL.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_TEST.md  README.md  ROADMAP.md  SETUP_COMPLETE.md  SPRINT_2_SUMMARY.md  SPRINT_PLAN.md  TASKS.md  TODO.md  VALIDATED_TEST_RESULTS.md  WEEK_1_COMPLETE.md  docker-compose.yml  pyproject.toml  quick_demo.py  run_test_and_save.py  simple_test.py
.github/workflows/: lint.yml  publish-python-sdk.yml  test.yml
alembic/: env.py
alembic/versions/: 2605e91f94ff_initial_schema_services_patterns_.py
docker/: postgres-init.sql
docs/: ALIGNMENT_SUMMARY.md  API_DOCUMENTATION.md  BETA_TESTING_COMPLETE.md  BETA_TESTING_PLAN.md  BETA_USER_ONBOARDING.md  CODING_STANDARDS.md  DEVELOPMENT_COMPLETE_SUMMARY.md  FINAL_STATUS.md  INTELLIGENT_ANALYSIS_GUIDE.md  ITERATION_SPEC.md  PERFORMANCE_OPTIMIZATION_PLAN.md  POSTHOG_ALIGNMENT_REVIEW.md  PRODUCTION_DEPLOYMENT.md  PROGRESS_REPORT.md  PROJECT_COMPLETE_SUMMARY.md  QUICK_START_FOR_POSTHOG.md  REAL_POSTHOG_TEST_RESULTS.md  ROADMAP.md  SDK_STRATEGY.md  SECURITY_AUDIT.md  SETUP_COMPLETE.md  SPRINT_4_COMPLETE.md  SPRINT_5_COMPLETE.md  SPRINT_6_COMPLETE.md  SPRINT_7_COMPLETE.md  SPRINT_8_COMPLETE.md  TASKS.md  TODAY_SUMMARY.md
examples/: complete_pipeline_demo.py  intelligent_logging_demo.py  pattern_analysis_demo.py  realtime_visualization_demo.py  simple_intelligent_demo.py
posthog-app/: package.json  tsconfig.json  webpack.config.js
posthog-app/public/: index.html
posthog-app/src/: LipServiceApp.tsx  index.tsx
scripts/: release-python-sdk.py
sdk/go/: README.md  go.mod  lipservice.go  lipservice_test.go  logger.go  posthog.go  sampler.go
sdk/javascript/: README.md  jest.config.js  package.json
sdk/javascript/examples/: demo.ts  posthog-integration.ts
sdk/javascript/src/: client.ts  config.ts  handler.ts  index.ts  models.ts  posthog.ts  sampler.ts  signature.ts
sdk/javascript/tests/: sdk.test.ts  setup.ts
sdk/python/: LICENSE  README.md  pyproject.toml  run_tests.py
sdk/python/examples/: basic_usage.py  fastapi_example.py  posthog_demo.py  posthog_integration.py
sdk/python/lipservice/: __init__.py  client.py  config.py  handler.py  models.py  optimized_posthog.py  performance.py  posthog.py  sampler.py  signature.py
sdk/python/lipservice/integrations/: __init__.py  django.py  fastapi.py  flask.py
sdk/python/tests/: conftest.py  test_integration.py  test_integration_comprehensive.py  test_load_testing.py  test_memory_profiling.py  test_performance.py  test_performance_optimization.py  test_posthog.py  test_sampler.py  test_security.py  test_signature.py
sdk/rust/: Cargo.toml
sdk/rust/src/: config.rs  lib.rs  logger.rs  posthog.rs  sampler.rs  signature.rs
src/: __init__.py  main.py
src/adaptive_filtering/: __init__.py
src/api/: adaptive_filtering.py  analysis.py  cost_savings.py  intelligent_analysis.py  patterns.py  pipeline.py  policies.py  realtime_streaming.py  services.py  visualization.py
src/engine/: __init__.py  analyzer.py  anomaly_detector.py  llm_provider.py  pattern_analyzer.py  policy_generator.py  signature.py
src/integrations/: __init__.py  analysis_service.py  posthog_client.py
src/intelligent_analysis/: __init__.py
src/realtime_streaming/: __init__.py
src/storage/: database.py  models.py
src/storage/_/_init/_/: _.py
src/visualization/: __init__.py
tests/: conftest.py  load_test.py  test_analyzer.py  test_anomaly_detector.py  test_api.py  test_api_patterns.py  test_api_policies.py  test_api_services.py  test_intelligent_analysis.py  test_llm_provider.py  test_models.py  test_pattern_analyzer.py  test_policy_generator.py  test_posthog_client.py  test_realtime_visualization.py  test_signature.py
tests/integration/: README.md  RUN_POSTHOG_TEST.bat  generate_posthog_style_logs.py  run_full_test.sh  run_test.sh  test_posthog_integration.py  test_with_generated_logs.py  test_with_real_posthog_logs.py
