[project]
name = "lipservice"
version = "0.1.0"
description = "AI-powered intelligent log sampling that reduces costs by 50-80%"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # Core API framework
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    
    # Database & Storage (matching PostHog versions)
    "sqlalchemy==2.0.38",  # PostHog uses 2.0.38
    "psycopg2-binary==2.9.7",  # PostHog uses 2.9.7
    "redis==4.5.4",  # PostHog uses 4.5.4 (not 6.x!)
    "clickhouse-driver==0.2.9",  # PostHog uses 0.2.9
    
    # Pydantic & Logging (matching PostHog)
    "pydantic==2.10.3",  # PostHog uses 2.10.3
    "structlog==25.4.0",  # PostHog uses 25.4.0
    
    # LLM Providers (matching PostHog)
    "openai==1.102.0",  # PostHog uses 1.102.0
    "anthropic==0.52.0",  # PostHog uses 0.52.0
    
    # ML/Analysis (matching PostHog)
    "scikit-learn==1.5.0",  # PostHog uses 1.5.0
    "numpy==1.26.4",  # PostHog uses 1.26.4
    
    # Additional (not in PostHog, but needed for us)
    "alembic>=1.13.0",  # Database migrations
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.0",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================================
# Ruff Configuration (matching PostHog's standards)
# ============================================================================
[tool.ruff]
line-length = 120  # PostHog uses 120, not the default 79
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
# PostHog's selection of rules
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C9",   # mccabe complexity
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# MyPy Configuration (matching PostHog's strict standards)
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
check_untyped_defs = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
]

# ============================================================================
# Pytest Configuration (matching PostHog's setup)
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

