[package]
name = "lipservice"
version = "0.2.0"
edition = "2021"
authors = ["LipService Team <team@lipservice.dev>"]
description = "AI-powered intelligent log sampling for Rust applications"
license = "MIT"
repository = "https://github.com/srex-dev/lipservice-rust"
keywords = ["logging", "sampling", "posthog", "observability", "ai"]
categories = ["development-tools::profiling", "development-tools::testing"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["http-proto", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dashmap = "5.0"
parking_lot = "0.12"
regex = "1.0"
md5 = "0.7"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "signature_computation"
harness = false

[[bench]]
name = "adaptive_sampler"
harness = false

[[bench]]
name = "posthog_exporter"
harness = false
